[package]
name = "cli-clipboard"
version = "0.1.0"
authors = ["Andrew Stephan <thekiteeatingtree@gmail.com>"]
description = "cli-clipboard is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/thekiteeatingtree/cli-clipboard"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
failure = "0.1"
wl-clipboard-rs = "0.4"
x11-clipboard = "0.5.1"

[target.'cfg(all(unix, not(any(target_os="android", target_os="emscripten"))))'.dependencies]
fork = "0.1.15"
