[package]
name = "cli-clipboard"
version = "0.2.1"
authors = ["Allie Stephan <allie@pointguard.dev>"]
description = "cli-clipboard is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/actuallyallie/cli-clipboard"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]
edition = "2018"
readme = "README.md"

[target.'cfg(windows)'.dependencies]
clipboard-win = {version = "4.0.2", features=["std"]}

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
wl-clipboard-rs = "0.6"
x11-clipboard = "0.6"
